# lab_motors_control

almond_ws/: main.tex
almond_ws/devel/: .catkin  local_setup.sh
almond_ws/devel/lib/pkgconfig/: almond.pc
almond_ws/src/FingerLib/src/: FingerLib.cpp  FingerLib.h
almond_ws/src/almond/: CMakeLists.txt  package.xml
almond_ws/src/almond/src/: test.ino
dynamixel_ws/devel/: .catkin  .rosinstall  local_setup.sh  setup.sh
dynamixel_ws/devel/lib/dynamixel_sdk/: group_bulk_write.py  group_sync_read.py  group_sync_write.py  packet_handler.py  port_handler.py  protocol2_packet_handler.py  robotis_def.py
dynamixel_ws/devel/lib/dynamixel_test/: omx_control_node
dynamixel_ws/devel/lib/pkgconfig/: dynamixel_sdk.pc  dynamixel_sdk_examples.pc  dynamixel_test.pc  dynamixel_workbench_msgs.pc  (+3 more)
dynamixel_ws/src/dynamixel_test/: CMakeLists.txt  copiaCMakeLists.txt  copiapackage.xml  package.xml
dynamixel_ws/src/dynamixel_test/config/: hardware.yaml  joint_position_controller.yaml  joints.yaml
dynamixel_ws/src/dynamixel_test/launch/: controller_utils.launch  dynamixel.launch  joint_position_controller.launch  open_manipulator_control.launch
dynamixel_ws/src/dynamixel_test/src/: hardware_interface.cpp  omx_control_node.cpp
dynamixel_ws/src/tests/: CMakeLists.txt  package.xml
newDynamixel_ws/devel/: .catkin
newDynamixel_ws/src/dynamixel_controllers/: setup.py
newDynamixel_ws/src/dynamixel_driver/: package.xml
newDynamixel_ws/src/dynamixel_msgs/: package.xml
newDynamixel_ws/src/panTilt/: CMakeLists.txt  package.xml
viral_pc/viral/devel/: .catkin  setup.sh
(+314 files in other folders)
