<?xml version="1.0"?>
<package format="2">
  <name>dynamixel_test</name>
  <version>0.0.0</version>
  <description>Package for tests with dynamixel with codes taken from omx </description>
  <license>Apache 2.0</license>

  <author email="jhshim@robotis.com">Ryan Shim</author>
  <maintainer email="pyo@robotis.com">Pyo</maintainer>
  <!-- <url type="website">http://wiki.ros.org/open_manipulator_hw</url> -->
  <url type="emanual">http://emanual.robotis.com/docs/en/platform/openmanipulator</url>
  <url type="repository">https://github.com/ROBOTIS-GIT/open_manipulator</url>
  <url type="bugtracker">https://github.com/ROBOTIS-GIT/open_manipulator/issues</url>

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>roscpp</build_depend>
  <build_depend>controller_manager</build_depend>
  <build_depend>dynamixel_workbench_toolbox</build_depend>
  <build_depend>hardware_interface</build_depend>
  <build_depend>yaml-cpp</build_depend>
  <exec_depend>roscpp</exec_depend>
  <exec_depend>controller_manager</exec_depend>
  <exec_depend>dynamixel_workbench_toolbox</exec_depend>
  <exec_depend>hardware_interface</exec_depend>
  <exec_depend>yaml-cpp</exec_depend>
</package>
